@@ -14,6 +14,9 @@
     src/global/log-error.c: Add support to the flash framework for
     locking sectors.  Patch by Xiangfu Liu.
 
+  * src/cmd/cmd_lockflash.c, src/cmd/Makefile.am: Add "lockflash" command
+    by Xiangfu Liu.
+
 2011-07-27  Jie Zhang  <jie.zhang@analog.com>
 
   * src/bfin/bfin-part-bfin.c (bfin_wait_ready): Set the default wait
